--- a/modulo2/html-sistema-loja/template-loja/style.css
+++ b/modulo2/html-sistema-loja/template-loja/style.css
@@ -1,14 +1,8 @@
 DIV {
     width: 100%;
     background-color: rgb(40, 39, 41);
-    border: 3px solid black;
-    }
-    
-html, body{
-   
-    width: 100%;
-
-
+    border: 3px solid red;
+        
 }
 
 header{
@@ -16,20 +10,25 @@ header{
     text-align: center;
 
     color: white;
-    width: 100%;
+    width: 99%;
     position: fixed;
-    top: 0px;
+    top: 0;
     bottom: 0;
-
+    left: 0;
 }
 
 footer{
 
     padding: 10px 0;
     color: white;
-    width: 100%;
+    width: 99%;
     position: fixed;
     left: 0;
     bottom: 0;
+
+}
+td{
+
+    text-align: center;
 
 }
